# bioemu

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/bioemu/: __init__.py  convert_chemgraph.py  denoiser.py  sample.py  sidechain_relax.py  steering.py
src/bioemu/config/steering/: physical_steering.yaml
src/bioemu/hpacker_setup/: setup_hpacker.py  setup_sidechain_relax.sh
src/bioemu/steering/: __init__.py  collective_variables.py  dpm_smc.py  potentials.py  utils.py
tests/: test_convert_chemgraph.py
tests/steering/: test_chignolin_e2e.py  test_collective_variables.py  test_integration.py  test_potentials.py  test_utils.py
